lbb/backend/counter-backend.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: counter-backend
  labels:
    app: counter-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: counter-backend
  template:
    metadata:
      labels:
        app: counter-backend
    spec:
      containers:
        - name: counter-backend
          image: ghcr.io/sean-mcguinness/counter-backend:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
