lbb/backend/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: counter-backend
spec:
  selector:
    app: counter-backend
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
