lbb/backend/backend-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: counter-backend
  name: counter-backend
spec:
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: counter-backend
